Tue Aug  6 21:48:31 2013  Kouji Takao  <kouji.takao@gmail.com>

	* ext/readline/readline.c (readline_s_set_point, Init_readline):
	  add Readline.point=(pos). Patched by naruse.  [ruby-dev:47535]
	  [Feature #8675]

Tue Aug  6 21:14:11 2013  Kouji Takao  <kouji.takao@gmail.com>

	* ext/readline/readline.c (Init_readline, readline_s_set_output)
	(clear_rl_outstream, readline_s_set_input, clear_rl_instream)
	(readline_readline): fix causing SEGV if closed IO object that is
	  set Readline.input or Readline.output. Patched by akr
	  [ruby-dev:47509] [Bug #8644]

Tue Aug  6 17:56:40 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_push_frame): change type of stack_max to size_t.

Tue Aug  6 17:42:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (range_last): exclude the last number of the exclusive range
	  if the end is Numeric.  [ruby-dev:47587] [Bug #8739]

Tue Aug  6 17:42:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_conv_from_wchar): converted string to CP_UTF8
	  should have UTF-8 encoding.  otherwise no conversion takes place
	  later.

Tue Aug  6 17:21:38 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_push_frame): fix stack overflow check codes.
	  Stack overflow check should be done *after* pushing a stack frame.
	  However, some stack overflow checking codes checked *before*
	  pushing a stack frame with iseq->stack_max.
	  To solve this problem, add a new parameter `stack_max' to specify
	  a possible consuming stack size.

	* vm_core.h (CHECK_VM_STACK_OVERFLOW0): add to share the stack overflow
	  checking code.

	* insns.def: catch up this change.

	* vm.c, vm_eval.c: ditto.

	* test/ruby/test_exception.rb: add a stack overflow test.
	  This code is reported by nobu.

Tue Aug  6 17:02:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_conv_from_wchar): use WideCharToMultiByte(),
	  as like as mbstr_to_wstr(), in the first step of the convertion from
	  WCHAR.
